# MindCraftGUI

./: .gitignore  README.md  main.py  main.spec  pyproject.toml
MindCraftGUI-main/: README.md  pyproject.toml
