[tool.poetry]
name = "mindcraft_gui"
version = "1.0.1"
description = "A GUI application for MindCraft"
authors = ["FantomWolf182"]
license = "MIT"
packages = [{ include = "mindcraft_gui" }]

[tool.poetry.dependencies]
python = "^3.9.13"
customtkinter = "^5.1.2"
requests = "^2.31.0"
PyGithub = "^2.3.0"
# Add any other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Adjust to your preferred version of pytest for testing

[tool.poetry.scripts]
mindcraft-gui = "mindcraft_gui.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
